RESOLVED FIXED220000
[WinCairo][WebGL] webgl/1.0.3/conformance/misc/uninitialized-test.html is failing only for Debug builds
https://bugs.webkit.org/show_bug.cgi?id=220000
Summary [WinCairo][WebGL] webgl/1.0.3/conformance/misc/uninitialized-test.html is fai...
Fujii Hironori
Reported 2020-12-17 18:31:56 PST
[WinCairo][WebGL] webgl/1.0.3/conformance/misc/uninitialized-test.html is failing only for Debug builds The following test cases are failing only for Debug builds. webgl/1.0.3/conformance/misc/uninitialized-test.html webgl/1.0.3/conformance/renderbuffers/framebuffer-state-restoration.html webgl/1.0.3/conformance/renderbuffers/renderbuffer-initialization.html webgl/1.0.3/conformance/textures/texture-attachment-formats.html webgl/1.0.3/conformance/textures/texture-mips.html It seems that ANGLE fills uninitialized buffers with color instread of black transparent.
Attachments
layout-test-results/webgl/1.0.3/conformance/misc/uninitialized-test-actual.txt (1.23 KB, text/plain)
2020-12-17 18:33 PST, Fujii Hironori
no flags
WIP patch (libANGLE/renderer/renderer_utils.cpp) (710 bytes, patch)
2020-12-17 18:57 PST, Fujii Hironori
no flags
Patch (7.60 KB, patch)
2020-12-17 21:29 PST, Fujii Hironori
kbr: review+
Fujii Hironori
Comment 1 2020-12-17 18:33:52 PST
Created attachment 416486 [details] layout-test-results/webgl/1.0.3/conformance/misc/uninitialized-test-actual.txt
Fujii Hironori
Comment 2 2020-12-17 18:57:09 PST
Created attachment 416488 [details] WIP patch (libANGLE/renderer/renderer_utils.cpp)
Fujii Hironori
Comment 3 2020-12-17 21:29:04 PST
Kenneth Russell
Comment 4 2020-12-18 14:20:57 PST
+jonahr and geofflang from ANGLE team as FYI
Kenneth Russell
Comment 5 2020-12-18 14:21:36 PST
Comment on attachment 416499 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=416499&action=review Good find; looks good to me. r+ > Source/WebCore/platform/graphics/win/PlatformDisplayWin.cpp:36 > + EGLint attributs[] = { Typo: attributes
Fujii Hironori
Comment 6 2020-12-20 12:09:49 PST
Radar WebKit Bug Importer
Comment 7 2020-12-20 12:10:17 PST
Fujii Hironori
Comment 8 2020-12-20 12:16:43 PST
Note You need to log in before you can comment on or make changes to this bug.