[WinCairo][WebGL] webgl/1.0.3/conformance/misc/uninitialized-test.html is failing only for Debug builds https://bugs.webkit.org/show_bug.cgi?id=220000

Reviewed by Kenneth Russell.

Source/WebCore:

Some WebGL tests were failing only in debug builds. Those test
cases expect black transparent for uninitialized buffers. ANGLE
enables debug layers as default only for debug builds. And it
fills uninitialized buffers with kDebugColorInitClearValue instead
of black transparent.

Create a PlatformDisplay with explicitly disabling debug layers by
using EGL_PLATFORM_ANGLE_DEBUG_LAYERS_ENABLED_ANGLE.

* PlatformWinCairo.cmake:
* platform/graphics/win/PlatformDisplayWin.cpp: Added.
(WebCore::PlatformDisplayWin::initializeEGLDisplay):
* platform/graphics/win/PlatformDisplayWin.h:

LayoutTests:

* platform/wincairo/TestExpectations:

Canonical link: https://commits.webkit.org/232620@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271015 268f45cc-cd09-0410-ab3c-d52691b4dbfc